--- a/nasa-explore/package.json
+++ b/nasa-explore/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-scripts": "4.0.3",
+    "react-search-autocomplete": "^5.4.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
