--- a/nasa-explore/public/manifest.json
+++ b/nasa-explore/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Nasa Explore",
+  "name": "Nasa Explore Web App",
   "icons": [
     {
       "src": "favicon.ico",
